--- a/automation_testcase/Functional_Testing/test-output/old/Suite/methods.html
+++ b/automation_testcase/Functional_Testing/test-output/old/Suite/methods.html
@@ -1,10 +1,100 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c072cb">  <td>21/07/27 17:55:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_StandardUser_AddToCart@6dbb137d]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@81412691</td>   <td></td> </tr>
-<tr bgcolor="a263c2">  <td>21/07/27 17:55:32</td>   <td>5469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_StandardUser_AddToCart.Login_StandardUser()[pri:0, instance:com.saucedemo.testcases.TC_StandardUser_AddToCart@6dbb137d]">Login_StandardUser</td> 
-  <td>main@81412691</td>   <td></td> </tr>
-<tr bgcolor="c072cb">  <td>21/07/27 17:55:57</td>   <td>30775</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_StandardUser_AddToCart@6dbb137d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@81412691</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:27:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_Entitlement_StandardUser@65466a6a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="d3d1ba">  <td>21/07/28 13:27:30</td>   <td>4823</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Entitlement_StandardUser.Login_StandardUser()[pri:0, instance:com.saucedemo.testcases.TC_Entitlement_StandardUser@65466a6a]">Login_StandardUser</td> 
+  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:28:04</td>   <td>38934</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_Entitlement_StandardUser@65466a6a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:28:06</td>   <td>40204</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_Entitlement_LockedOutUser@4ddced80]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="ca8de8">  <td>21/07/28 13:28:09</td>   <td>43176</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Entitlement_LockedOutUser.Login_LockedOutUser()[pri:0, instance:com.saucedemo.testcases.TC_Entitlement_LockedOutUser@4ddced80]">Login_LockedOutUser</td> 
+  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:28:12</td>   <td>46595</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_Entitlement_LockedOutUser@4ddced80]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:28:13</td>   <td>48073</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_Entitlement_PerformanceGlitchUser@1534f01b]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="94f994">  <td>21/07/28 13:28:17</td>   <td>51223</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Entitlement_PerformanceGlitchUser.Login_StandardUser()[pri:0, instance:com.saucedemo.testcases.TC_Entitlement_PerformanceGlitchUser@1534f01b]">Login_StandardUser</td> 
+  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:28:58</td>   <td>92752</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_Entitlement_PerformanceGlitchUser@1534f01b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:28:59</td>   <td>93934</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_Entitlement_ProblemUser@78e117e3]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="d3a4e9">  <td>21/07/28 13:29:02</td>   <td>96829</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Entitlement_ProblemUser.Login_StandardUser()[pri:0, instance:com.saucedemo.testcases.TC_Entitlement_ProblemUser@78e117e3]">Login_StandardUser</td> 
+  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:29:36</td>   <td>130932</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_Entitlement_ProblemUser@78e117e3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:29:38</td>   <td>132259</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_StandardUser_AddToCart@2ea227af]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="6297d2">  <td>21/07/28 13:29:42</td>   <td>136256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_StandardUser_AddToCart.Login_StandardUser()[pri:0, instance:com.saucedemo.testcases.TC_StandardUser_AddToCart@2ea227af]">Login_StandardUser</td> 
+  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:30:30</td>   <td>184858</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_StandardUser_AddToCart@2ea227af]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:30:31</td>   <td>186054</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_StandadUser_AddToCartMultiple@4386f16]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="a6bb77">  <td>21/07/28 13:30:36</td>   <td>190969</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_StandadUser_AddToCartMultiple.StandardUser_Multiple()[pri:0, instance:com.saucedemo.testcases.TC_StandadUser_AddToCartMultiple@4386f16]">StandardUser_Multiple</td> 
+  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:31:26</td>   <td>241029</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_StandadUser_AddToCartMultiple@4386f16]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:31:28</td>   <td>242283</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_StandardUser_RemovingAndAddingInCart@363ee3a2]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="d0fbae">  <td>21/07/28 13:31:32</td>   <td>246775</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_StandardUser_RemovingAndAddingInCart.StandardUser_Removing()[pri:0, instance:com.saucedemo.testcases.TC_StandardUser_RemovingAndAddingInCart@363ee3a2]">StandardUser_Removing</td> 
+  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:32:22</td>   <td>296107</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_StandardUser_RemovingAndAddingInCart@363ee3a2]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:32:23</td>   <td>297550</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_ProblemUser_AddToCart@4690b489]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="8bf671">  <td>21/07/28 13:32:26</td>   <td>300566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ProblemUser_AddToCart.Login_ProblemUser()[pri:0, instance:com.saucedemo.testcases.TC_ProblemUser_AddToCart@4690b489]">Login_ProblemUser</td> 
+  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:33:04</td>   <td>338126</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_ProblemUser_AddToCart@4690b489]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:33:05</td>   <td>339225</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_ProblemUser_AddToCartMultiple@79b06cab]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="a2f981">  <td>21/07/28 13:33:08</td>   <td>342262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ProblemUser_AddToCartMultiple.ProblemUser()[pri:0, instance:com.saucedemo.testcases.TC_ProblemUser_AddToCartMultiple@79b06cab]">ProblemUser</td> 
+  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:33:42</td>   <td>376268</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_ProblemUser_AddToCartMultiple@79b06cab]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:33:43</td>   <td>377596</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_ProblemUser_RemovingAndAddingInCart@3eb7fc54]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="c87581">  <td>21/07/28 13:33:46</td>   <td>380756</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ProblemUser_RemovingAndAddingInCart.Problemuser_Removing()[pri:0, instance:com.saucedemo.testcases.TC_ProblemUser_RemovingAndAddingInCart@3eb7fc54]">Problemuser_Removing</td> 
+  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:34:20</td>   <td>414763</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_ProblemUser_RemovingAndAddingInCart@3eb7fc54]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:34:22</td>   <td>416219</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_PerformanceGlitchUser_AddToCart@7f552bd3]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="ece37d">  <td>21/07/28 13:34:25</td>   <td>419593</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PerformanceGlitchUser_AddToCart.Login_PerformanceGlitchUser()[pri:0, instance:com.saucedemo.testcases.TC_PerformanceGlitchUser_AddToCart@7f552bd3]">Login_PerformanceGlitchUser</td> 
+  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:35:24</td>   <td>478377</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_PerformanceGlitchUser_AddToCart@7f552bd3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:35:25</td>   <td>479902</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_PerformanceGlitchUser_AddToCartMultiple@3c22fc4c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="8a708f">  <td>21/07/28 13:35:29</td>   <td>483805</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PerformanceGlitchUser_AddToCartMultiple.PerformaceGlitchUser()[pri:0, instance:com.saucedemo.testcases.TC_PerformanceGlitchUser_AddToCartMultiple@3c22fc4c]">PerformaceGlitchUser</td> 
+  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:36:28</td>   <td>542946</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_PerformanceGlitchUser_AddToCartMultiple@3c22fc4c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:36:30</td>   <td>544477</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_PerformanceGlitchUser_RemovingAndAddingInCart@460d0a57]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="62806e">  <td>21/07/28 13:36:33</td>   <td>547213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PerformanceGlitchUser_RemovingAndAddingInCart.PerformanceGlitchUser_Removing()[pri:0, instance:com.saucedemo.testcases.TC_PerformanceGlitchUser_RemovingAndAddingInCart@460d0a57]">PerformanceGlitchUser_Removing</td> 
+  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:37:33</td>   <td>607806</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_PerformanceGlitchUser_RemovingAndAddingInCart@460d0a57]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:37:35</td>   <td>609211</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_NegativeCase_Login@47d90b9e]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="c386de">  <td>21/07/28 13:37:38</td>   <td>612649</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_NegativeCase_Login.Login_StandardUser()[pri:0, instance:com.saucedemo.testcases.TC_NegativeCase_Login@47d90b9e]">Login_StandardUser</td> 
+  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:37:41</td>   <td>615259</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_NegativeCase_Login@47d90b9e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:37:42</td>   <td>616621</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_NegativeCase_CheckOut@1184ab05]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="f978b0">  <td>21/07/28 13:37:45</td>   <td>619773</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_NegativeCase_CheckOut.StandardUser_CheckOut_NC()[pri:0, instance:com.saucedemo.testcases.TC_NegativeCase_CheckOut@1184ab05]">StandardUser_CheckOut_NC</td> 
+  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:38:50</td>   <td>684457</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_NegativeCase_CheckOut@1184ab05]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:38:51</td>   <td>685671</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_NegativeCase_EmptyCart@3aefe5e5]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="f660a8">  <td>21/07/28 13:38:54</td>   <td>688991</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_NegativeCase_EmptyCart.EmptyCart()[pri:0, instance:com.saucedemo.testcases.TC_NegativeCase_EmptyCart@3aefe5e5]">EmptyCart</td> 
+  <td>main@1720339</td>   <td></td> </tr>
+<tr bgcolor="80ba90">  <td>21/07/28 13:40:08</td>   <td>762270</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_NegativeCase_EmptyCart@3aefe5e5]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1720339</td>   <td></td> </tr>
 </table>
