--- a/automation_testcase/Functional_Testing/test-output/old/Default suite/classes.html
+++ b/automation_testcase/Functional_Testing/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.saucedemo.testcases.TC_Entitlement_LockedOutUser</td>
+<td>com.saucedemo.testcases.TC_PerformanceGlitchUser_Sort</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Login_LockedOutUser</td>
+<td>PerformanceGlitchUser_Sort</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
