--- a/automation_testcase/Functional_Testing/test-output/old/Default suite/methods-alphabetical.html
+++ b/automation_testcase/Functional_Testing/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ab799c">  <td>21/07/28 13:26:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Entitlement_LockedOutUser.Login_LockedOutUser()[pri:0, instance:com.saucedemo.testcases.TC_Entitlement_LockedOutUser@6d2a209c]">Login_LockedOutUser</td> 
+<tr bgcolor="ab799c">  <td>21/07/28 15:38:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_PerformanceGlitchUser_Sort.PerformanceGlitchUser_Sort()[pri:0, instance:com.saucedemo.testcases.TC_PerformanceGlitchUser_Sort@6d2a209c]">PerformanceGlitchUser_Sort</td> 
   <td>main@168366</td>   <td></td> </tr>
-<tr bgcolor="80cb77">  <td>21/07/28 13:26:39</td>   <td>-6522</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_Entitlement_LockedOutUser@6d2a209c]">&gt;&gt;setup</td> 
+<tr bgcolor="80cb77">  <td>21/07/28 15:38:47</td>   <td>-7900</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.saucedemo.testcases.TC_PerformanceGlitchUser_Sort@6d2a209c]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@168366</td>   <td></td> </tr>
-<tr bgcolor="80cb77">  <td>21/07/28 13:26:49</td>   <td>2728</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_Entitlement_LockedOutUser@6d2a209c]">&lt;&lt;tearDown</td> 
+<tr bgcolor="80cb77">  <td>21/07/28 15:40:01</td>   <td>65886</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.saucedemo.testcases.TC_PerformanceGlitchUser_Sort@6d2a209c]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@168366</td>   <td></td> </tr>
 </table>
