--- a/automation_testcase/Functional_Testing/test-output/old/Suite/classes.html
+++ b/automation_testcase/Functional_Testing/test-output/old/Suite/classes.html
@@ -4,6 +4,37 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>com.saucedemo.testcases.TC_PerformanceGlitchUser_Sort</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>PerformanceGlitchUser_Sort</td>
+<td>PerformanceGlitchUser </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setup</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td>com.saucedemo.testcases.TC_StandardUser_AddToCart</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -12,7 +43,8 @@
 <tr>
 <td>&nbsp;</td>
 <td>Login_StandardUser</td>
-<td>&nbsp;</td></tr>
+<td>StandardUser </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -42,7 +74,8 @@
 <tr>
 <td>&nbsp;</td>
 <td>StandardUser_Removing</td>
-<td>&nbsp;</td></tr>
+<td>StandardUser </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -71,8 +104,9 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ProblemUser</td>
-<td>&nbsp;</td></tr>
+<td>ProblemUser_Multiple</td>
+<td>ProblemUser </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -102,7 +136,8 @@
 <tr>
 <td>&nbsp;</td>
 <td>Login_LockedOutUser</td>
-<td>&nbsp;</td></tr>
+<td>LockedOutUser </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -131,8 +166,9 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Login_ProblemUser</td>
-<td>&nbsp;</td></tr>
+<td>ProblemUserAddToCart</td>
+<td>ProblemUser </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -162,7 +198,8 @@
 <tr>
 <td>&nbsp;</td>
 <td>Problemuser_Removing</td>
-<td>&nbsp;</td></tr>
+<td>ProblemUser </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -191,8 +228,9 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Login_StandardUser</td>
-<td>&nbsp;</td></tr>
+<td>PerformanceGlitchUser_Login</td>
+<td>PerformanceGlitchUser </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -222,7 +260,8 @@
 <tr>
 <td>&nbsp;</td>
 <td>Login_StandardUser</td>
-<td>&nbsp;</td></tr>
+<td>StandardUser </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -251,8 +290,9 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Login_StandardUser</td>
-<td>&nbsp;</td></tr>
+<td>ProblemUser_Login</td>
+<td>ProblemUser </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -281,8 +321,9 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>StandardUser_CheckOut_NC</td>
-<td>&nbsp;</td></tr>
+<td>StandardUser_CheckOut_NegativeCases</td>
+<td>NegativeCases </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -312,7 +353,8 @@
 <tr>
 <td>&nbsp;</td>
 <td>EmptyCart</td>
-<td>&nbsp;</td></tr>
+<td>NegativeCases </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -342,7 +384,8 @@
 <tr>
 <td>&nbsp;</td>
 <td>StandardUser_Multiple</td>
-<td>&nbsp;</td></tr>
+<td>StandardUser </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -371,7 +414,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Login_StandardUser</td>
+<td>LoginNegativeCase</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -402,7 +445,8 @@
 <tr>
 <td>&nbsp;</td>
 <td>Login_PerformanceGlitchUser</td>
-<td>&nbsp;</td></tr>
+<td>PerformanceGlitchUser </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -432,7 +476,8 @@
 <tr>
 <td>&nbsp;</td>
 <td>PerformaceGlitchUser</td>
-<td>&nbsp;</td></tr>
+<td>PerformanceGlitchUser </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -462,7 +507,70 @@
 <tr>
 <td>&nbsp;</td>
 <td>PerformanceGlitchUser_Removing</td>
+<td>PerformanceGlitchUser </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setup</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>com.saucedemo.testcases.TC_StandardUser_Sort</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>StandardUser_Sort</td>
+<td>StandardUser </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setup</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>com.saucedemo.testcases.TC_ProblemUser_Sort</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ProblemUser_Sort</td>
+<td>ProblemUser </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
